--- a/RTA Scene/RTA Scene/RTA Scene.vcxproj.filters
+++ b/RTA Scene/RTA Scene/RTA Scene.vcxproj.filters
@@ -49,5 +49,11 @@
     <FxCompile Include="VertexShader.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Normal_Spec_PS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="Normal_Spec_VS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
