--- a/RTA Scene/RTA Scene/RTA Scene.vcxproj
+++ b/RTA Scene/RTA Scene/RTA Scene.vcxproj
@@ -77,12 +77,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="DDSTextureLoader.h" />
     <ClInclude Include="GraphicsManager.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Models\Header.h" />
     <ClInclude Include="Renderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="DDSTextureLoader.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Renderer.cpp" />
   </ItemGroup>
