--- a/RTA Scene/RTA Scene/RTA Scene.vcxproj.filters
+++ b/RTA Scene/RTA Scene/RTA Scene.vcxproj.filters
@@ -97,5 +97,11 @@
     <FxCompile Include="Normal_Spec_VS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Anim_Vertex.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="Anim_Pixel.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
